--- a/article.html
+++ b/article.html
@@ -13,23 +13,23 @@
                     <option value="mercedes">Mercedes</option>
                     <option value="audi">Audi</option>
                 </select>
-                <button id="color-toggle-btn">Night Mode</button>
+                <button id="color-toggle-btn">Dark Mode</button>
             </nav>
         </header>
 
         <main>
             <nav id="side-nav">
                 <ul>
-                    <li><a>Title</a></li>
-                    <li><a>Place holder 1</a></li>
-                    <li><a>Place holder 2</a></li>
-                    <li><a>Reference</a></li>
-                    <li><a>Vocab</a></li>
-                    <li><a>Quiz</a></li>
+                    <li><a href="#Fonts">Fonts</a></li>
+                    <li><a href="#Sizes">Sizes</a></li>
+                    <li><a href="#Families">Families</a></li>
+                    <li><a href="#Ref">Reference</a></li>
+                    <li><a href="#Vocab">Vocab</a></li>
+                    <li><a href="#Quiz">Quiz</a></li>
                 </ul>
             </nav>
             <div id="content">
-                <h2>Title</h2>
+                <h2 id="Fonts">Fonts</h2>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
@@ -40,6 +40,8 @@
                     Aliquam arcu quam, facilisis in odio nec, venenatis porta enim. Integer nisi mauris, vehicula 
                     ac venenatis sit amet, vestibulum sit amet est. Quisque lobortis viverra placerat.
                 </p>
+
+                <h3 id="Sizes">Sizes</h3>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
@@ -50,6 +52,8 @@
                     Aliquam arcu quam, facilisis in odio nec, venenatis porta enim. Integer nisi mauris, vehicula 
                     ac venenatis sit amet, vestibulum sit amet est. Quisque lobortis viverra placerat.
                 </p>
+
+                <h3 id="Families">Families</h3>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
@@ -59,8 +63,6 @@
                     Pellentesque et orci porta, tincidunt felis vitae, lacinia velit. Vestibulum in tincidunt orci. 
                     Aliquam arcu quam, facilisis in odio nec, venenatis porta enim. Integer nisi mauris, vehicula 
                     ac venenatis sit amet, vestibulum sit amet est. Quisque lobortis viverra placerat.
-                </p>
-                <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
                     tempor non lacinia eget, consectetur eu lorem. In volutpat tempor 
@@ -70,6 +72,8 @@
                     Aliquam arcu quam, facilisis in odio nec, venenatis porta enim. Integer nisi mauris, vehicula 
                     ac venenatis sit amet, vestibulum sit amet est. Quisque lobortis viverra placerat.
                 </p>
+
+                <h3 id="Ref">References</h3>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
@@ -79,8 +83,6 @@
                     Pellentesque et orci porta, tincidunt felis vitae, lacinia velit. Vestibulum in tincidunt orci. 
                     Aliquam arcu quam, facilisis in odio nec, venenatis porta enim. Integer nisi mauris, vehicula 
                     ac venenatis sit amet, vestibulum sit amet est. Quisque lobortis viverra placerat.
-                </p>
-                <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
                     tempor non lacinia eget, consectetur eu lorem. In volutpat tempor 
@@ -90,6 +92,8 @@
                     Aliquam arcu quam, facilisis in odio nec, venenatis porta enim. Integer nisi mauris, vehicula 
                     ac venenatis sit amet, vestibulum sit amet est. Quisque lobortis viverra placerat.
                 </p>
+
+                <h3 id="Vocab">Vocab</h3>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
@@ -99,8 +103,6 @@
                     Pellentesque et orci porta, tincidunt felis vitae, lacinia velit. Vestibulum in tincidunt orci. 
                     Aliquam arcu quam, facilisis in odio nec, venenatis porta enim. Integer nisi mauris, vehicula 
                     ac venenatis sit amet, vestibulum sit amet est. Quisque lobortis viverra placerat.
-                </p>
-                <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
                     tempor non lacinia eget, consectetur eu lorem. In volutpat tempor 
@@ -110,6 +112,27 @@
                     Aliquam arcu quam, facilisis in odio nec, venenatis porta enim. Integer nisi mauris, vehicula 
                     ac venenatis sit amet, vestibulum sit amet est. Quisque lobortis viverra placerat.
                 </p>
+
+                <h3 id="Quiz">Quiz</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
+                    tempor non lacinia eget, consectetur eu lorem. In volutpat tempor 
+                    purus tempus rhoncus. <span>Nulla</span> a cursus nisi. Mauris non diam nec magna 
+                    pretium posuere eget ac libero. Nam volutpat dolor vitae bibendum porttitor. 
+                    Pellentesque et orci porta, tincidunt felis vitae, lacinia velit. Vestibulum in tincidunt orci. 
+                    Aliquam arcu quam, facilisis in odio nec, venenatis porta enim. Integer nisi mauris, vehicula 
+                    ac venenatis sit amet, vestibulum sit amet est. Quisque lobortis viverra placerat.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                    In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
+                    tempor non lacinia eget, consectetur eu lorem. In volutpat tempor 
+                    purus tempus rhoncus. <span>Nulla</span> a cursus nisi. Mauris non diam nec magna 
+                    pretium posuere eget ac libero. Nam volutpat dolor vitae bibendum porttitor. 
+                    Pellentesque et orci porta, tincidunt felis vitae, lacinia velit. Vestibulum in tincidunt orci. 
+                    Aliquam arcu quam, facilisis in odio nec, venenatis porta enim. Integer nisi mauris, vehicula 
+                    ac venenatis sit amet, vestibulum sit amet est. Quisque lobortis viverra placerat.
+                </p>
+
             </div>
             <div id="access-btns">
                 <button id="text-to-speech-btn"><img src="imgs/text-to-speech.png" alt="text to speech button"></button>
