--- a/article.html
+++ b/article.html
@@ -133,6 +133,18 @@
                     ac venenatis sit amet, vestibulum sit amet est. Quisque lobortis viverra placerat.
                 </p>
 
+                <div class="quiz">
+                    <div class="topic">
+                        <h5>ACESSIBILITY BASICS</h5>
+                        <h4>QUIZ #1</h4>
+                    </div>
+                    <img id="person" src="imgs/person.png">
+                    <div class="right-square">
+                        <img id="monitor" src="imgs/monitor.png">
+                    </div>
+                    <div class="left-square"></div>
+                </div>
+
             </div>
             <div id="access-btns">
                 <button id="text-to-speech-btn"><img src="imgs/text-to-speech.png" alt="text to speech button"></button>
