working on darkmode, and smooth scroll completed, html color tags being implemented

--- a/article.html
+++ b/article.html
@@ -8,12 +8,12 @@
         <header>
             <nav id="top-nav">
                 <select>
-                    <option value="volvo">Volvo</option>
-                    <option value="saab">Saab</option>
-                    <option value="mercedes">Mercedes</option>
-                    <option value="audi">Audi</option>
+                    <option class="top_nav_bar_text" value="volvo">Volvo</option>
+                    <option class="top_nav_bar_text" value="saab">Saab</option>
+                    <option class="top_nav_bar_text" value="mercedes">Mercedes</option>
+                    <option class="top_nav_bar_text" value="audi">Audi</option>
                 </select>
-                <button id="color-toggle-btn">Dark Mode</button>
+                <button class="mode_button_text" id="color-toggle-btn">Dark Mode</button>
             </nav>
         </header>
 
@@ -30,7 +30,7 @@
             </nav>
             <div id="content">
                 <h2 id="Fonts">Fonts</h2>
-                <p>
+                <p class="article_text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
                     tempor non lacinia eget, consectetur eu lorem. In volutpat tempor 
@@ -42,7 +42,7 @@
                 </p>
 
                 <h3 id="Sizes">Sizes</h3>
-                <p>
+                <p class="article_text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
                     tempor non lacinia eget, consectetur eu lorem. In volutpat tempor 
@@ -54,7 +54,7 @@
                 </p>
 
                 <h3 id="Families">Families</h3>
-                <p>
+                <p class="article_text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
                     tempor non lacinia eget, consectetur eu lorem. In volutpat tempor 
@@ -74,7 +74,7 @@
                 </p>
 
                 <h3 id="Ref">References</h3>
-                <p>
+                <p class="article_text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
                     tempor non lacinia eget, consectetur eu lorem. In volutpat tempor 
@@ -94,7 +94,7 @@
                 </p>
 
                 <h3 id="Vocab">Vocab</h3>
-                <p>
+                <p class="article_text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
                     tempor non lacinia eget, consectetur eu lorem. In volutpat tempor 
@@ -114,7 +114,7 @@
                 </p>
 
                 <h3 id="Quiz">Quiz</h3>
-                <p>
+                <p class="article_text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                     In sollicitudin nec lacus aliquam varius. Aenean libero sapien,
                     tempor non lacinia eget, consectetur eu lorem. In volutpat tempor 
