worked on css for articles page, two scrollbars needs to be fixed

--- a/article.html
+++ b/article.html
@@ -7,12 +7,17 @@
     <body>
         <header>
             <nav id="top-nav">
-                <select>
-                    <option class="top_nav_bar_text" value="volvo">Volvo</option>
-                    <option class="top_nav_bar_text" value="saab">Saab</option>
-                    <option class="top_nav_bar_text" value="mercedes">Mercedes</option>
-                    <option class="top_nav_bar_text" value="audi">Audi</option>
+                <select id="top-nav-drop-down" class="hidden">
+                    <option class="top_nav_bar_text" value="Home">Home</option>
+                    <option class="top_nav_bar_text" value="Acessibility Basics">Acessibility Basics</option>
+                    <option class="top_nav_bar_text" value="Audio Acessibility">Audio Acessibility</option>
+                    <option class="top_nav_bar_text" value="Visual Acessibility">Visual Acessibility</option>
                 </select>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Acessibility Basics</a></li>
+                <li><a href="#">Visual Accessibility</a></li>
+                <li><a href="#">Audio Accessibility</a></li>
+                <li><a href="#">Motor Accessibility</a></li>
                 <button class="mode_button_text" id="color-toggle-btn">Dark Mode</button>
             </nav>
         </header>
@@ -28,6 +33,7 @@
                     <li><a href="#Quiz">Quiz</a></li>
                 </ul>
             </nav>
+            
             <div id="content">
                 <h2 id="Fonts">Fonts</h2>
                 <p class="article_text">
@@ -132,18 +138,6 @@
                     Aliquam arcu quam, facilisis in odio nec, venenatis porta enim. Integer nisi mauris, vehicula 
                     ac venenatis sit amet, vestibulum sit amet est. Quisque lobortis viverra placerat.
                 </p>
-
-                <div class="quiz">
-                    <div class="topic">
-                        <h5>ACESSIBILITY BASICS</h5>
-                        <h4>QUIZ #1</h4>
-                    </div>
-                    <img id="person" src="imgs/person.png">
-                    <div class="right-square">
-                        <img id="monitor" src="imgs/monitor.png">
-                    </div>
-                    <div class="left-square"></div>
-                </div>
 
             </div>
             <div id="access-btns">
