--- a/article.html
+++ b/article.html
@@ -7,6 +7,7 @@
     <body>
         <header>
             <nav id="top-nav">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512" height="40px"><!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M137.4 406.6l-128-127.1C3.125 272.4 0 264.2 0 255.1s3.125-16.38 9.375-22.63l128-127.1c9.156-9.156 22.91-11.9 34.88-6.943S192 115.1 192 128v255.1c0 12.94-7.781 24.62-19.75 29.58S146.5 415.8 137.4 406.6z"/></svg>
                 <select id="top-nav-drop-down" class="hidden">
                     <option class="top_nav_bar_text" value="Home">Home</option>
                     <option class="top_nav_bar_text" value="Acessibility Basics">Acessibility Basics</option>
@@ -31,7 +32,6 @@
                     <li><a href="#Ref">Reference</a></li>
                     <li><a href="#Vocab">Vocab</a></li>
                     <li><a href="#Quiz">Quiz</a></li>
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" transform='rotate(90)' width="30px"><!--! Font Awesome Pro 6.1.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M374.6 310.6l-160 160C208.4 476.9 200.2 480 192 480s-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 370.8V64c0-17.69 14.33-31.1 31.1-31.1S224 46.31 224 64v306.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0S387.1 298.1 374.6 310.6z"/></svg>
                 </ul>
             </nav>
             
