--- a/article.html
+++ b/article.html
@@ -3,6 +3,7 @@
     <head>
         <title> Article Mockup </title>
         <link rel="stylesheet" href="article.css" />
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans" rel="stylesheet">
     </head>
     <body>
         <header>
