added arrows to header list

--- a/article.html
+++ b/article.html
@@ -15,11 +15,11 @@
                     <option class="top_nav_bar_text" value="Audio Accessibility">Audio Accessibility</option>
                     <option class="top_nav_bar_text" value="Visual Accessibility">Visual Accessibility</option>
                 </select>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Accessibility Basics</a></li>
-                <li><a href="#">Visual Accessibility</a></li>
-                <li><a href="#">Audio Accessibility</a></li>
-                <li><a href="#">Motor Accessibility</a></li>
+                <li><a href="#">Home &#8599</a></li>
+                <li><a href="#">Accessibility Basics &#8599</a></li>
+                <li><a href="#">Visual Accessibility &#8599</a></li>
+                <li><a href="#">Audio Accessibility &#8599</a></li>
+                <li><a href="#">Motor Accessibility &#8599</a></li>
             </nav>
         </header>
 
