--- a/article.html
+++ b/article.html
@@ -3,18 +3,24 @@
     <head>
         <title> Article Mockup </title>
         <link rel="stylesheet" href="article.css" />
+
+        <!--fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:semibold" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Niramit' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+
     </head>
     <body>
         <header>
             <nav id="top-nav">
                 <select id="top-nav-drop-down" class="hidden">
                     <option class="top_nav_bar_text" value="Home">Home</option>
-                    <option class="top_nav_bar_text" value="Acessibility Basics">Acessibility Basics</option>
-                    <option class="top_nav_bar_text" value="Audio Acessibility">Audio Acessibility</option>
-                    <option class="top_nav_bar_text" value="Visual Acessibility">Visual Acessibility</option>
+                    <option class="top_nav_bar_text" value="Accessibility Basics">Accessibility Basics</option>
+                    <option class="top_nav_bar_text" value="Audio Accessibility">Audio Accessibility</option>
+                    <option class="top_nav_bar_text" value="Visual Accessibility">Visual Accessibility</option>
                 </select>
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Acessibility Basics</a></li>
+                <li><a href="#">Accessibility Basics</a></li>
                 <li><a href="#">Visual Accessibility</a></li>
                 <li><a href="#">Audio Accessibility</a></li>
                 <li><a href="#">Motor Accessibility</a></li>
