edited button styles

--- a/article.html
+++ b/article.html
@@ -41,7 +41,7 @@
                 <br><br>
                 <h4>Accessibility Tools</h4>
                 <div id="access-btns">
-                    <h5>Font Family</h5>
+                    <h5>Font Style</h5>
                     <div id="font-family-btns">
                         <button id="open-sans-btn">
                             <h5>Ag</h5>
