created visual.html and wrote content for the article

--- a/article.html
+++ b/article.html
@@ -17,7 +17,7 @@
                 </select>
                 <li><a href="#">Home &#8599</a></li>
                 <li><a href="#">Basics &#8599</a></li>
-                <li><a href="#">Visual &#8599</a></li>
+                <li><a href="visual.html">Visual &#8599</a></li>
                 <li><a href="#">Audio &#8599</a></li>
                 <li><a href="#">Motor &#8599</a></li>
             </nav>
