--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 
         <div id="content">
             <p id="HomePageText">
-                When websites and web tools are properly designed and coded, people with disabilities 
-                can use them. However, when web developers are not aware of how they can make their websites 
-                and tools accessible, there may be barriers that make them difficult or impossible for some 
+                When websites and web tools are <i>properly designed</i> and <i>coded</i>, people with disabilities 
+                can <b>use them</b>. However, when web developers <b>are not aware</b> of how they can make their websites 
+                and tools accessible, there may be <i>barriers</i> that make websites <b>difficult or impossible</b> for some 
                 people to use. There are many types of web accessibility, such as motor accessibility, visual 
-                accessibility, and audio accessibility. Explore our website to learn more.
+                accessibility, and audio accessibility. Explore our website to <a href="article.html"><u>learn more</u></a>.
             </p>
         </div>
 
