--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:semibold" rel="stylesheet">
         <link href='https://fonts.googleapis.com/css?family=Niramit' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Roboto:light' rel='stylesheet'>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Source+Sans+Pro&display=swap" rel="stylesheet">
 
 </head>
 <body>
