added question generator

--- a/visual.html
+++ b/visual.html
@@ -3,6 +3,7 @@
     <head>
         <title> Article Mockup </title>
         <link rel="stylesheet" href="article.css" />
+        <link rel="stylesheet" href="quiz.css" />
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Source+Sans+Pro&display=swap" rel="stylesheet">
     </head>
@@ -180,12 +181,13 @@
                 </p> <br><br><br>
 
                 <h3 id="Quiz">Quiz</h3>
-                <p class="article_text">
-                    
-                </p>
-
+                <div class="scroll-container">
+                    <div class="quiz-container">
+                    </div>
+                </div>
             </div>
         </main>
         <script src="article.js"></script>
+        <script src="questionsGenerator.js"></script>
     </body>
 </html>
