fixed snap scroll

--- a/visual.html
+++ b/visual.html
@@ -181,11 +181,8 @@
                 </p> <br><br><br>
 
                 <h3 id="Quiz">Quiz</h3>
-                <div class="scroll-container">
-                    <div class="quiz-container">
-                    </div>
-                </div>
-            </div>
+                <section class="quiz-container">
+                </section>
         </main>
         <script src="article.js"></script>
         <script src="questionsGenerator.js"></script>
