--- a/visual.html
+++ b/visual.html
@@ -16,11 +16,11 @@
                     <option class="top_nav_bar_text" value="Audio Accessibility">Audio Accessibility</option>
                     <option class="top_nav_bar_text" value="Visual Accessibility">Visual Accessibility</option>
                 </select>
-                <li><a href="#">Home &#8599</a></li>
-                <li><a href="#">Basics &#8599</a></li>
-                <li><a href="#">Visual &#8599</a></li>
-                <li><a href="#">Audio &#8599</a></li>
-                <li><a href="#">Motor &#8599</a></li>
+                <li><a href="index.html">Home &#8599</a></li>
+                <li><a href="basics.html">Basics &#8599</a></li>
+                <li><a href="visual.html">Visual &#8599</a></li>
+                <li><a href="audio.html">Audio &#8599</a></li>
+                <li><a href="motor.html">Motor &#8599</a></li>
             </nav>
         </header>
 
