--- a/article.html
+++ b/article.html
@@ -20,11 +20,11 @@
                     <option class="top_nav_bar_text" value="Visual Accessibility">Visual Accessibility</option>
                 </select>
 
-                <li><a href="#">Home &#8599</a></li>
-                <li><a href="#">Basics &#8599</a></li>
+                <li><a href="index.html">Home &#8599</a></li>
+                <li><a href="basics.html">Basics &#8599</a></li>
                 <li><a href="visual.html">Visual &#8599</a></li>
-                <li><a href="#">Audio &#8599</a></li>
-                <li><a href="#">Motor &#8599</a></li>
+                <li><a href="audio.html">Audio &#8599</a></li>
+                <li><a href="motor.html">Motor &#8599</a></li>
                 <button class="mode_button_text" id="color-toggle-btn">Dark Mode</button>
 
             </nav>
