--- a/visual.html
+++ b/visual.html
@@ -11,7 +11,7 @@
         <header>
             <nav id="top-nav">
                 <select id="top-nav-drop-down" class="hidden">
-                    <option class="top_nav_bar_text" value="Home">Home</option>
+                    <option class="top_nav_bar_text"  value="Home">Home</option>
                     <option class="top_nav_bar_text" value="Accessibility Basics">Accessibility Basics</option>
                     <option class="top_nav_bar_text" value="Audio Accessibility">Audio Accessibility</option>
                     <option class="top_nav_bar_text" value="Visual Accessibility">Visual Accessibility</option>
@@ -181,9 +181,12 @@
                 </p> <br><br><br>
 
                 <h3 id="Quiz">Quiz</h3>
-                <section class="quiz-container">
-                </section>
-        </main>
+                <section class="quiz-container"></section>
+                <div class="flex-container">
+                    <div id="results">results</div>
+                    <button id="refresh-button">Refresh</button>
+                </div>
+            </div>
         <script src="article.js"></script>
         <script src="questionsGenerator.js"></script>
     </body>
