resolved inconsistencies in caption

--- a/audio.html
+++ b/audio.html
@@ -25,7 +25,7 @@
             <nav id="side-nav">
                 <h4>Title of Article&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h4>
                 <ul>
-                    <li><a href="#Audio">Audio</a></li>
+                    <li><a href="#Audio">Introduction</a></li>
                     <li><a href="#Who">Who</a></li>
                     <li><a href="#Overview">Overview</a></li>
                     <li><a href="#Transcripts">Transcripts</a></li>
@@ -90,7 +90,7 @@
                     <picture>
                         <img src="https://juvairiyyapatel2017ualfad.files.wordpress.com/2017/10/img_2206-1.jpg?w=503&h=471" alt="Deaf Culture Sign Language" style="width:80%;">
                     </picture>
-                    <figcaption>'Cup' by Chuck Baird</figcaption>
+                    <figcaption>Image caption: 'Cup' by Chuck Baird</figcaption>
                 </figure>
 
                 <h3 id="Who">Who</h3>
@@ -147,7 +147,7 @@
                             some milk.
                         </p>
                     </div>
-                    <figcaption>Example of Simple Transcript</figcaption>
+                    <figcaption>Image caption: Example of Simple Transcript</figcaption>
                 </figure>
                 <br><br><br>
 
