changed link of button

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
         <div id="homePage_btn">
-            <a href="article.html"><button type="button" id="omePage_btn">LEARN MORE</button></a>
+            <a href="visual.html"><button type="button" id="omePage_btn">LEARN MORE</button></a>
         </div>
 
         <div id="content">
