--- a/visual.html
+++ b/visual.html
@@ -183,5 +183,9 @@
             </div>
         <script src="article.js"></script>
         <script src="questionsGenerator.js"></script>
+        <script>
+            let initPage = function(){init("visual")};
+            window.addEventListener('DOMContentLoaded', initPage);
+        </script>
     </body>
 </html>
