fixed inconsistencies in titles

--- a/motor.html
+++ b/motor.html
@@ -24,7 +24,7 @@
             </div>
 
             <nav id="side-nav">
-                <h4>Motor Accessibility</h4>
+                <h4>Motor</h4>
                 <ul>
                     <li><a href="#Fonts">Introduction</a></li>
                     <li><a href="#Sizes">Examples of barriers</a></li>
