--- a/visual.html
+++ b/visual.html
@@ -24,7 +24,7 @@
             </div>
 
             <nav id="side-nav">
-                <h4>Title of Article&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h4>
+                <h4>Visual&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h4>
                 <ul>
                     <li><a href="#Fonts">Introduction</a></li>
                     <li><a href="#Sizes">Color & Contrast</a></li>
