--- a/audio.html
+++ b/audio.html
@@ -24,7 +24,7 @@
             </div>
 
             <nav id="side-nav">
-                <h4>Title of Article&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h4>
+                <h4>Audio&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h4>
                 <ul>
                     <li><a href="#Audio">Introduction</a></li>
                     <li><a href="#Who">Who</a></li>
@@ -77,7 +77,7 @@
             </nav>
             
             <div id="content">
-                <h2 id="Audio">Audio</h2>
+                <h2 id="Audio">Audio Accessibility</h2>
                 <p class="article_text">
                     With over 450 million people in the world with hearing disability, 
                     having your website accessible to those with hearing disability is essential. 
