--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         <div id="content">
             <p id="HomePageText">
                 When websites and web tools are <i>properly designed</i> and <i>coded</i>, people with disabilities 
-                can <b>use them</b>. However, when web developers <b>are not aware</b> of how they can make their websites 
+                can <strong>use them</strong>. However, when web developers <strong>are not aware</strong> of how they can make their websites 
                 and tools accessible, there may be <i>barriers</i> that make websites <b>difficult or impossible</b> for some 
                 people to use. There are many types of web accessibility, such as motor accessibility, visual 
-                accessibility, and audio accessibility. Explore our website to <a href="article.html"><u>learn more</u></a>.
+                accessibility, and audio accessibility. Explore our website to <a href="visual.html"><u>learn more</u></a>.
             </p>
         </div>
 
