--- a/visual.html
+++ b/visual.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Article Mockup </title>
+        <title> Visual Accessibility </title>
         <link rel="stylesheet" href="article.css" />
         <link rel="stylesheet" href="quiz.css" />
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans" rel="stylesheet">
