linking pages all works fine

--- a/audio.html
+++ b/audio.html
@@ -11,7 +11,7 @@
         <header>
             <nav id="top-nav">
                 <li><a href="index.html">Home &#8599</a></li>
-                <li><a href="basic.html">Basics &#8599</a></li>
+                <li><a href="basics.html">Basics &#8599</a></li>
                 <li><a href="visual.html">Visual &#8599</a></li>
                 <li><a href="audio.html">Audio &#8599</a></li>
                 <li><a href="motor.html">Motor &#8599</a></li>
