--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <option class="top_nav_bar_text" value="Visual Accessibility">Visual Accessibility</option>
             </select>
             <li><a href="index.html">Home &#8599</a></li>
-            <li><a href="basic.html">Basics &#8599</a></li>
+            <li><a href="basics.html">Basics &#8599</a></li>
             <li><a href="visual.html">Visual &#8599</a></li>
             <li><a href="audio.html">Audio &#8599</a></li>
             <li><a href="motor.html">Motor &#8599</a></li>
