added tab logo to every page

--- a/basics.html
+++ b/basics.html
@@ -3,6 +3,7 @@
     <head>
         <title> Article Mockup </title>
         <link rel="stylesheet" href="article.css" />
+        <link rel="shortcut icon" type="image/jpg" href="imgs/logo.png"/>
     </head>
     <body>
         <header>
