--- a/visual.html
+++ b/visual.html
@@ -4,6 +4,7 @@
         <title> Visual Accessibility </title>
         <link rel="stylesheet" href="article.css" />
         <link rel="stylesheet" href="quiz.css" />
+        <link rel="shortcut icon" type="image/jpg" href="imgs/logo.png"/>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Source+Sans+Pro&display=swap" rel="stylesheet">
     </head>
