--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 
         <div id="homePage_btn">
-            <a href="visual.html"><button type="button" id="omePage_btn">LEARN MORE</button></a>
+            <a href="basics.html"><button type="button" id="omePage_btn">LEARN MORE</button></a>
         </div>
 
         <div id="content">
@@ -57,7 +57,7 @@
                 can <strong>use them</strong>. However, when web developers <strong>are not aware</strong> of how they can make their websites 
                 and tools accessible, there may be <i>barriers</i> that make websites <b>difficult or impossible</b> for some 
                 people to use. There are many types of web accessibility, such as motor accessibility, visual 
-                accessibility, and audio accessibility. Explore our website to <a href="visual.html"><u>learn more</u></a>.
+                accessibility, and audio accessibility. Explore our website to <a href="basics.html"><u>learn more</u></a>.
             </p>
         </div>
 
