changed wording of side nav item in motor.html

--- a/motor.html
+++ b/motor.html
@@ -28,8 +28,8 @@
                 <h4>Motor</h4>
                 <ul>
                     <li><a href="#Fonts">Introduction</a></li>
-                    <li><a href="#Sizes">Examples of barriers</a></li>
-                    <li><a href="#Families">Specialized tools</a></li>
+                    <li><a href="#Sizes">Examples</a></li>
+                    <li><a href="#Families">Specialized Tools</a></li>
                     <li><a href="#Ref">References</a></li>
                     <li><a href="#Vocab">Vocab</a></li>
                     <li><a href="#Quiz">Quiz</a></li>
