--- a/basics.html
+++ b/basics.html
@@ -25,7 +25,7 @@
             </div>
 
             <nav id="side-nav">
-                <h4>Motor Accessibility</h4>
+                <h4>Disabilities</h4>
                 <ul>
                     <li><a href="#Visual">Visual</a></li>
                     <li><a href="#Motor">Motor</a></li>
